--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -103,10 +103,11 @@ span {
 
 .clas1 {
   background-color: #141526;
-  padding-bottom: 3rem !important;
+  color: white;
+  /* padding-bottom: 3rem !important;
   position: relative;
   padding: 50px;
-  margin: 5px;
+  margin: 5px; */
 }
 .viewallnav {
   color: white;
@@ -445,4 +446,22 @@ a:hover {
 .option {
   font-family: 'Open Sans', sans-serif;
   line-height: 1cm;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 6rem;
+  height: 6rem;
+  border: 5px solid var(--grey-400);
+  border-radius: 50%;
+  border-top-color: var(--primary-500);
+  animation: spinner 2s linear infinite;
+}
+.loading-center {
+  margin: 0 auto;
 }
