--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -465,3 +465,26 @@ a:hover {
 .loading-center {
   margin: 0 auto;
 }
+
+.avatar {
+  width: 140px;
+  margin: auto;
+}
+.avatar img {
+  border: solid 6px transparent;
+  border-radius: 50%;
+}
+
+.card-title {
+  margin-top: 20px;
+}
+.card-text {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.card-text .fa {
+  font-size: 26px;
+}
+.bg {
+  background-color: black;
+}
