--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -438,16 +438,7 @@ a:hover {
   margin: 4rem auto;
   transition: var(--transition);
 }
-.form3 {
-  width: 600px;
-  /* max-width: var(--fixed-width2); */
-  background: var(--white);
-  border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-5);
-  padding: 3rem 2.5rem;
-  margin: 4rem auto;
-  transition: var(--transition);
-}
+
 .head3 {
   text-align: center;
   margin: 10px;
@@ -507,4 +498,41 @@ a:hover {
   padding: 2rem 2.5rem;
   margin: 3rem auto;
   transition: var(--transition);
+}
+.backgroundImage {
+  background-image: url('assets/bgggg.jpg');
+
+  background-repeat: no-repeat;
+  height: 115vh;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* color: white; */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  /* background-color: #000000cc; */
 }
